--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "Riverside Postdoctoral Association Symposium 2019"
 email: "postdoc@ucr.edu"
 description: "GDG DevFest is a set of events all around the world"
-baseurl: "/zeppelin"
+#baseurl: "/zeppelin"
 url: "https://rpa.ucr.edu/symposium2019"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-141608372-2"
@@ -72,12 +72,12 @@ aboutBlock:
  - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
 
 # Statistic Block
-#statisticBlockImage: "statistic.jpg"
-#statisticBlock:
-# - {count: "350", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
-#- {count: "48", specialCharacter: "+", info: "hours", detail: "of pure Google technologies"}
-# - {count: "20", specialCharacter: "+", info: "speakers", detail: "from country and beyond"}
-# - {count: "3", specialCharacter: "", info: "parallel tracks", detail: "plus entertainment lounge"}
+statisticBlockImage: "statistic.jpg"
+statisticBlock:
+ - {count: "350", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
+ - {count: "48", specialCharacter: "+", info: "hours", detail: "of pure Google technologies"}
+ - {count: "20", specialCharacter: "+", info: "speakers", detail: "from country and beyond"}
+ - {count: "3", specialCharacter: "", info: "parallel tracks", detail: "plus entertainment lounge"}
 
 # Latest News Block
 latestNewsTitle: "Latest news"
