--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 # Site Settings
 title: "Riverside Postdoctoral Association Symposium 2019"
 email: "postdoc@ucr.edu"
-description: "GDG DevFest is a set of events all around the world"
-#baseurl: "/zeppelin"
+description: "Riverside Postdoctoral Association Symposium 2019"
+#baseurl: "/"
 url: "https://rpa.ucr.edu/symposium2019"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-141608372-2"
 googleAnalyticsSiteUrl: "https://rpa.ucr.edu/"
-#siteVerification: "b9imDOrFawXaBXCC4r3uJDdswSYcalD-wWpMYhFq-no"
+googleMapApiKey: "AIzaSyA8JDpOOaQskxp8ZoAC_tne05c6WQzCgxc"
 
 # Organizer Info
 organizerName: "RPA"
@@ -30,7 +30,7 @@ organizerLink: "https://rpa.ucr.edu/"
 
 # Head
 metaKeywords: "event, postdoc, RPA, UCR, California"
-twitterAccount: "@DevFest"
+twitterAccount: "@UCRPostdoc"
 socialImageSrcGooglePlus: "/img/seo/RPA1.png"
 socialImageSrcTwitter: "/img/seo/RPA1.png"
 socialImageSrcFacebook: "/img/seo/RPA1.png"
@@ -38,17 +38,20 @@ socialImageSrcFacebook: "/img/seo/RPA1.png"
 # Documents
 #c4pUrl: "https://bit.ly/dfua-c4p"
 #c4sponsorsUrl: "/assets/GDG_DevFest_Partnership.pdf"
-
+c4sponsorsUrl: "https://forms.gle/q8VeFcnrVskmjd9j7"
 
 # Navigation
 navigationLinks:
  - {permalink: "/", text: "Home"}
- - {permalink: "/blog/", text: "Blog"}
- - {permalink: "/schedule/", text: "Schedule"}
- - {permalink: "/speakers/", text: "Speakers"}
- - {permalink: "/team/", text: "Team"}
- - {permalink: "/logistics/", text: "Logistics"}
- - {permalink: "/hackathon/", text: "Hackathon"}
+# - {permalink: "/blog/", text: "Blog"}
+# - {permalink: "/schedule/", text: "Schedule"}
+ - {permalink: "https://rpa.ucr.edu/symposium/", text: "Schedule"}
+# - {permalink: "/speakers/", text: "Speakers"}
+ - {permalink: "/https://rpa.ucr.edu/symposium/", text: "Speakers"}
+# - {permalink: "/team/", text: "Team"}
+# - {permalink: "/logistics/", text: "Logistics"}
+# - {permalink: "/hackathon/", text: "Hackathon"}
+
 bottomNavigationLinks:
  - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
 rightNavigationButtons:
@@ -65,19 +68,20 @@ heroButtons:
  - {link: "https://rpa.ucr.edu/symposium/", text: "Register - Comming soon"}
 
 # About Block
-aboutTitle: "About RPA"
+aboutTitle: "Postdoc Symposium 2019"
 aboutBlock:
- - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
- - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
- - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
+ - {title: "Communicate", image: "Communicate.jpg", text: "your research" }
+ - {title: "Explore", image: "Explore.jpg", text: "the diversity of postdoctoral research performed at UCR" }
+ - {title: "Collaborate", image: "Collaborate.jpg", text: "with other postdocs" }
+ - {title: "Invent", image: "Invent2.jpg", text: "a world-changing idea" }
 
 # Statistic Block
 statisticBlockImage: "statistic.jpg"
 statisticBlock:
- - {count: "350", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
- - {count: "48", specialCharacter: "+", info: "hours", detail: "of pure Google technologies"}
- - {count: "20", specialCharacter: "+", info: "speakers", detail: "from country and beyond"}
- - {count: "3", specialCharacter: "", info: "parallel tracks", detail: "plus entertainment lounge"}
+ - {count: "230", specialCharacter: "+", info: "Postdocs", detail: "from UCR"}
+ - {count: "12", specialCharacter: "+", info: "Speakers", detail: "from different departments"}
+ - {count: "9", specialCharacter: "+", info: "Hours", detail: "of pure Science"}
+ - {count: "4", specialCharacter: "", info: "Career Development Talk", detail: "plus in your career"}
 
 # Latest News Block
 latestNewsTitle: "Latest news"
@@ -90,19 +94,19 @@ rockstarSpeakersButtonText: "See all speakers"
 
 # Location Block
 locationBlockTitle: "Location"
-eventLocationName: "Conference Hall"
-eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-eventStreetAddress: "22 Teatral'na St"
-eventAddressLocality: "Lviv"
-eventAddressLocalityRegion: "Lvivska"
-eventPostalCode: "79000"
-eventAddressCountry: "Ukraine"
-eventStartTime: "2014-10-25T10:00"
+#eventLocationName: "Conference Hall"
+#eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
+eventStreetAddress: "Highlander Union Building"
+eventAddressLocality: "University Avenue"
+eventAddressLocalityRegion: "Riverside, CA"
+eventPostalCode: "92521"
+eventAddressCountry: "United States"
+eventStartTime: "2019-11-04T09:00"
 eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+eventEndTime: "2019-11-04T18:00"
+eventPlaceCoordinates: "33.974313, -117.328792"
+mapCenterCoordinates: "33.974313, -117.328792"
+mapMobileCenterCoordinates: "33.974313, -117.328792"
 
 # Venue Block
 venueBlockTitle: "Venue"
@@ -116,7 +120,7 @@ venueFeatures: ["3 huge cinema screens", "Doulby Digital Surround EX audio syste
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
 tweetsFeedTitle: "What's Up?"
-twitterHashTag: "devfest"
+twitterHashTag: "ucrpostdocsymposium2019"
 twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
 # Partners Block
@@ -127,8 +131,8 @@ partnersC4sponsorsButton: "Become a sponsor"
 # Subscribe Block
 subscribeImage: "subscribe.jpg"
 subscribeTitle: "Subscribe for updates"
-subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
-subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
+subscribeAction: "https://forms.gle/kNnFzfZFU5g1D7D18"
+subscribeInfo: "Registration will be open around end of September. Number of seats are limited. Stay tuned!"
 
 # Tickets Block
 ticketsTitle: "Pricetable"
@@ -174,20 +178,20 @@ ticketsOffers:
 
 # Footer
 socialLinks:
- - {link: "https://plus.google.com/b/102444623953913144164", icon: "google-plus"}
- - {link: "https://twitter.com/intent/user?screen_name=GDGLviv", icon: "twitter"}
- - {link: "https://facebook.com/GDGLviv", icon: "facebook"}
- - {permalink: "/feed.xml", icon: "rss"}
+ - {link: "https://www.instagram.com/ucrpostdoctoral/", icon: "twitter"}
+ - {link: "https://twitter.com/intent/user?screen_name=UCRPostdoc", icon: "twitter"}
+ - {link: "https://facebook.com/UC-Riverside-Postdoctoral-Association-460810420930605", icon: "facebook"}
+# - {permalink: "/feed.xml", icon: "rss"}
 footerBlocks:
  -
   title: "Links"
   links:
-   - {link: "http://gdg.org.ua", text: "GDG.org.ua"}
-   - {link: "https://developers.google.com", text: "Google Developers"}
+   - {link: "http://rpa.ucr.edu/", text: "RPA"}
+   - {link: "https://graduate.ucr.edu/", text: "Graduate Division"}
  -
   title: "Contacts"
   links:
-   - {link: "mailto:lviv@gdg.org.ua", text: "lviv@gdg.org.ua"}
+   - {link: "mailto:postdoc@ucr.edu", text: "postdoc@ucr.edu"}
  -
   title: "FAQ"
   links:
@@ -274,18 +278,18 @@ prizes:
 
 # Hackathon Location Block
 hackathonLocationBlockTitle: "Location"
-hackathonLocationName: "Communa"
-hackathonLocationLink: "http://communa.net.ua/"
-hackathonStreetAddress: "1 Halytska St"
-hackathonAddressLocality: "Lviv"
-hackathonAddressLocalityRegion: "Lvivska"
-hackathonPostalCode: "79000"
-hackathonAddressCountry: "Ukraine"
-hackathonTimeTitle: "Hack through"
-hackathonStartTime: "2014-10-24T10:00"
+#hackathonLocationName: "Communa"
+#hackathonLocationLink: "http://communa.net.ua/"
+hackathonStreetAddress: "Highlander Union Building"
+hackathonAddressLocality: "University Avenue"
+hackathonAddressLocalityRegion: "Riverside, CA" 
+hackathonPostalCode: "92521"
+hackathonAddressCountry: "United States"
+hackathonTimeTitle: "Symposium"
+hackathonStartTime: "2019-11-04T09:00"
 hackathonDoorTime: "09:00"
-hackathonEndTime: "2014-10-25T00:00"
+hackathonEndTime: "2019-11-04T18:00"
 viewOnMap: "View on Google Maps"
-hackathonPlaceCoordinates: "49.840999, 24.031144"
-hackathonMapCenterCoordinates: "49.840696, 24.028754"
-hackathonMapMobileCenterCoordinates: "49.841639, 24.031182"
+hackathonPlaceCoordinates: "33.974313, -117.328792" 
+hackathonMapCenterCoordinates: "33.974313, -117.328792" 
+hackathonMapMobileCenterCoordinates: "33.974313, -117.328792" 
