--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ rightNavigationButtons:
 heroImage: "hero.jpg"
 heroTitle: " <typeout> 2019"
 eventDate: "November 04, 2019"
+location: "HUB 302 North"
 typeoutTextValues: '"", "Riverside Postdoctoral Association Symposium"'
 #typeoutFallback: "Season"
 heroButtons:
