--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ socialImageSrcFacebook: "/img/seo/RPA1.png"
 # Documents
 #c4pUrl: "https://bit.ly/dfua-c4p"
 #c4sponsorsUrl: "/assets/GDG_DevFest_Partnership.pdf"
-c4sponsorsUrl: "https://forms.gle/q8VeFcnrVskmjd9j7"
+c4sponsorsUrl: "https://forms.gle/TwYefXLzcqMbXqvP9"
 
 # Navigation
 navigationLinks:
