--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,6 @@ markdown: kramdown
 permalink: pretty
 exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 
-
 # Site Settings
 title: "Riverside Postdoctoral Association Symposium 2019"
 email: "postdoc@ucr.edu"
@@ -17,8 +16,9 @@ description: "Riverside Postdoctoral Association Symposium 2019"
 url: "https://rpa.ucr.edu/symposium2019"
 permalink: "/news/:title"
 googleAnalyticsTrackingId: "UA-141608372-2"
-googleAnalyticsSiteUrl: "https://rpa.ucr.edu/"
-googleMapApiKey: "AIzaSyA8JDpOOaQskxp8ZoAC_tne05c6WQzCgxc"
+googleAnalyticsSiteUrl: "rpa.ucr.edu/symposium2019/"
+googleMapApiKey: "AIzaSyAR6TLRQlR5_TRhiKho7B8ugoBfByFIxGI"
+#mapsbackground: green.png
 
 # Organizer Info
 organizerName: "RPA"
@@ -44,10 +44,10 @@ c4sponsorsUrl: "https://forms.gle/TwYefXLzcqMbXqvP9"
 navigationLinks:
  - {permalink: "/", text: "Home"}
  - {permalink: "/news/", text: "News"}
-# - {permalink: "/schedule/", text: "Schedule"}
- - {permalink: "https://rpa.ucr.edu/symposium/", text: "Schedule"}
-# - {permalink: "/speakers/", text: "Speakers"}
- - {permalink: "/https://rpa.ucr.edu/symposium/", text: "Speakers"}
+ - {permalink: "/schedule/", text: "Schedule"}
+# - {permalink: "https://rpa.ucr.edu/symposium/", text: "Schedule"}
+ - {permalink: "/speakers/", text: "Speakers"}
+# - {permalink: "/https://rpa.ucr.edu/symposium/", text: "Speakers"}
 # - {permalink: "/team/", text: "Team"}
 # - {permalink: "/logistics/", text: "Logistics"}
 # - {permalink: "/hackathon/", text: "Hackathon"}
@@ -55,7 +55,7 @@ navigationLinks:
 bottomNavigationLinks:
  - {link: "hhttps://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Become a speaker"}
 rightNavigationButtons:
- - {link: "https://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Become a speaker"}
+ - {link: "https://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Call for Posters"}
 
 # Hero Block
 heroImage: "hero.png"
@@ -65,7 +65,7 @@ location: "HUB 302 South"
 typeoutTextValues: '"", "Postdoc Symposium"'
 #typeoutFallback: "Season"
 heroButtons:
- - {link: "https://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Call for Abstract"}
+ - {link: "https://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Call for Posters"}
  - {link: "https://forms.gle/F9C7xGhVoySp4tz16", text: "Register"}
 
 # About Block
@@ -77,21 +77,21 @@ aboutBlock:
  - {title: "Invent", image: "Invent2.jpg", text: "a world-changing idea" }
 
 # Statistic Block
-statisticBlockImage: "statistic.jpg"
+statisticBlockImage: "blue.png"
 statisticBlock:
- - {count: "220", specialCharacter: "+", info: "Postdocs", detail: "from UCR"}
- - {count: "12", specialCharacter: "+", info: "Speakers", detail: "from different departments"}
+ - {count: "100", specialCharacter: "+", info: "Attendees", detail: "from UCR"}
+ - {count: "12", specialCharacter: "+", info: "Postdocs Speakers", detail: "from different departments"}
  - {count: "9", specialCharacter: "+", info: "Hours", detail: "of pure Science"}
- - {count: "4", specialCharacter: "", info: "Career Development Talk", detail: "plus in your career"}
+ - {count: "5", specialCharacter: "", info: "Career Development Talk", detail: "plus in your career"}
 
 # Latest News Block
 latestNewsTitle: "Latest news"
 
 # Rockstar Speakers Block
-rockstarSpeakersImage: "rockstar-speakers.jpg"
-rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Rockstar speakers"
-rockstarSpeakersButtonText: "See all speakers"
+rockstarSpeakersImage: "orange.png"
+rockstarSpeakersCount: 7
+rockstarSpeakersTitle: "Keynote Speakers"
+rockstarSpeakersButtonText: "See all Speakers"
 
 # Location Block
 locationBlockTitle: "Location"
@@ -119,7 +119,7 @@ venueTitle: "Kinopalace Cinema"
 venueFeatures: ["3 huge cinema screens", "Doulby Digital Surround EX audio system", "Located directly in the city center"]
 
 # Tweets Feed Block
-tweetsFeedImage: "twitter-feed.jpg"
+tweetsFeedImage: "pink.png"
 tweetsFeedTitle: "What's Up?"
 twitterHashTag: "ucrpostdocsymposium2019"
 twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
@@ -130,10 +130,10 @@ partnersTitle: "Partners"
 partnersC4sponsorsButton: "Become a sponsor"
 
 # Subscribe Block
-subscribeImage: "subscribe.jpg"
+subscribeImage: "red.png"
 subscribeTitle: "Subscribe for updates"
-subscribeAction: "https://forms.gle/kNnFzfZFU5g1D7D18"
-subscribeInfo: "Registration will be open around end of September. Number of seats are limited. Stay tuned!"
+subscribeAction: "http://lists.ucr.edu/cgi-bin/mailman/listinfo/rpa-postdoc"
+subscribeInfo: "Registration will close soon. Number of seats are limited. Stay tuned!"
 
 # Tickets Block
 ticketsTitle: "Pricetable"
@@ -218,13 +218,13 @@ findWayWalking: "WALKING"
 findWayBicycling: "BICYCLING"
 findWayTransit: "TRANSIT"
 findWayFindFlight: "Find Flight"
-logisticsMapCenterCoordinates: "49.056728, 3.117289"
-logisticsMapMobileCenterCoordinates: "48.335365, 23.711648"
+logisticsMapCenterCoordinates: "33.974313, -117.328792"
+logisticsMapMobileCenterCoordinates: "33.974313, -117.328792"
 logisticsMapAutoDirections: false
 
 # Logistics Direction Details Block
-directionDetailsImage: "direction-details.jpg"
-directionDetailsTitle: "Get around Lviv"
+# directionDetailsImage: "direction-details.png"
+directionDetailsTitle: "Get around UCR"
 directionDetailsCards:
  - {title: "From the Airport", information: 'Airport is right at the city border. It is easily reachable by car, public transport or taxi. More information is available at <a href="http://lwo.aero/en/transport">airport website</a>.'}
  - {title: "Public Transit", information: 'Google Transit is available in Lviv. So you can find your way in Google Maps. Moreover, you can download any of the offline public transit apps available for Lviv.'}
