--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,50 +1,81 @@
 - 
-  date: "2014-10-24"
-  dateReadable: "October 24"
+  date: "2019-11-04"
+  dateReadable: "November 04, 2019"
   tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-    - {title: "Community", color: "#e91e63"}
+    - {title: "", color:  "#90be4e"}
   timeslots:
     - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [002, 003, 004]
+    	startTime: "08:15",
+    	endTime: "09:00",
+    	sessionIds: [001]
     }
     - {
-        startTime: "11:00",
-        endTime: "11:45",
-        sessionIds: [003, 404, 004]
+        startTime: "09:00",
+        endTime: "09:10",
+        sessionIds: [002]
     }
     - {
-    	startTime: "12:00",
-    	endTime: "11:45",
-    	sessionIds: [307]
+    	startTime: "09:10",
+    	endTime: "09:45",
+    	sessionIds: [003]
     }
-- 
-  date: "2014-10-25"
-  dateReadable: "October 25"
-  tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-  timeslots: 
     - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [404, 002]
+    	startTime: "09:50",
+    	endTime: "10:30",
+    	sessionIds: [004]
+    }
+    - {
+        startTime: "10:30",
+        endTime: "10:50",
+        sessionIds: [005]
+    }
+    - {
+        startTime: "10:50",
+        endTime: "11:00",
+        sessionIds: [006]
     }
     - {
     	startTime: "11:00",
-    	endTime: "11:45",
-    	sessionIds: [002, 003]
+    	endTime: "11:35",
+    	sessionIds: [007]
     }
     - {
-        startTime: "13:00",
-        endTime: "13:45",
-        sessionIds: [003]
+        startTime: "11:40",
+        endTime: "12:00",
+        sessionIds: [008]
     }
     - {
-    	startTime: "14:00",
-    	endTime: "15:00",
-    	sessionIds: [503]
+    	startTime: "12:00",
+    	endTime: "01:00",
+    	sessionIds: [009]
+    }
+    - {
+    	startTime: "01:00",
+    	endTime: "01:30",
+    	sessionIds: [010]
+    }
+    - {
+        startTime: "01:30",
+        endTime: "02:10",
+        sessionIds: [011]
+    }
+    - {
+    	startTime: "02:10",
+    	endTime: "02:30",
+    	sessionIds: [012]
+    }
+    - {
+        startTime: "02:30",
+        endTime: "03:10",
+        sessionIds: [013]
+    }
+    - {
+    	startTime: "03:10",
+    	endTime: "04:10",
+    	sessionIds: [014]
+    }
+    - {
+    	startTime: "04:10",
+    	endTime: "04:45",
+    	sessionIds: [015]
     }
