--- a/_config.yml
+++ b/_config.yml
@@ -45,12 +45,11 @@ navigationLinks:
  - {permalink: "/", text: "Home"}
  - {permalink: "/news/", text: "News"}
  - {permalink: "/schedule/", text: "Schedule"}
-# - {permalink: "https://rpa.ucr.edu/symposium/", text: "Schedule"}
  - {permalink: "/speakers/", text: "Speakers"}
-# - {permalink: "/https://rpa.ucr.edu/symposium/", text: "Speakers"}
-# - {permalink: "/team/", text: "Team"}
+ - {permalink: "/sponsors/", text: "Sponsors"}
+ - {permalink: "/team/", text: "Team"}
 # - {permalink: "/logistics/", text: "Logistics"}
-# - {permalink: "/hackathon/", text: "Hackathon"}
+
 
 bottomNavigationLinks:
  - {link: "hhttps://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Become a speaker"}
@@ -125,8 +124,13 @@ twitterHashTag: "ucrpostdocsymposium2019"
 twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
 # Partners Block
-organizersTitle: "Organizers"
+organizersTitle: "Organizer"
 partnersTitle: "Partners"
+partnersC4sponsorsButton: "Become a sponsor"
+
+# Partners Block
+partner_pageTitle: "Partners"
+sponsorTitle: "Sponsors"
 partnersC4sponsorsButton: "Become a sponsor"
 
 # Subscribe Block
@@ -179,7 +183,7 @@ ticketsOffers:
 
 # Footer
 socialLinks:
- - {link: "https://www.instagram.com/ucrpostdoctoral/", icon: "twitter"}
+ - {link: "https://www.instagram.com/ucrpostdoctoral/", icon: "site"}
  - {link: "https://twitter.com/intent/user?screen_name=UCRPostdoc", icon: "twitter"}
  - {link: "https://facebook.com/UC-Riverside-Postdoctoral-Association-460810420930605", icon: "facebook"}
 # - {permalink: "/feed.xml", icon: "rss"}
@@ -208,7 +212,7 @@ showSessions: true
 
 # Team Block
 teamBlockTitle: "About us"
-aboutUs: "Google's services have become synonymous with simple things online. Number of technological innovations and IT industries in which Google is creating new products is enormous. It's hard to get to know all of them, but realistic. This is why people have started to gather in small local groups and share their experience. Later, the following groups have been called Google Developer Groups. GDGs can take many forms -- from just a few people getting together to watch some videos, to large gatherings with demos, tech talks, hackathons and conferences."
+aboutUs: "The purpose of the Riverside Postdoc Association is to provide an organized structure to help nurture both a professional and social network amongst postdocs. We work to provide and increase the network between the Postdoc community. It is our ambition to provide, (i) career orientated support and advocacy, (ii) opportunities for professional and social networking, (iii) promote a productive dialogue among postdocs, administration and faculty, (iv) to showcase postdoctoral achievements and research at UCR, (v) make available peer support and resources to help foster professional and personal growth and (vi) provide a platform to highlight issues that affect UCR postdoctoral community. We wish to work together to achieve these goals."
 
 # Logistics Find Way Block
 findWayTitle: "Find your way here"
@@ -260,11 +264,11 @@ hackathonTitle: "Hackathon"
 enableHackathon: true
 
 # Hackathon About Block
-aboutHackathonTitle: "Meet our themes"
-hackathonRows:
- - {title: "Android Wear", image: "hackathon-0.png", details: "The front doors will be locked because this is after hours, please park behind the building and come to the door nearest the parking lot.<br><br>Our last meeting showed that there was a lot of interest in Android Wear so we decided to put on an Android Wear Hackathon to see what you could come up with! We realize that this is pretty short notice so we hope you can help us spread the word! There will be pizza, prizes and a great group of geeks to spend the evening coding with! Even if you don't have an app idea come on in and lend a hand to someone else or maybe find inspiration once you're here!"}
- - {title: "Google Glass", image: "hackathon-1.png", details: "We love wearable computing especially Google Glass for which we want to gather the break up community in order to boost innovation.<br><br>Coding an app on Google Glass needs its Rockstar Dev : the team needs a fast learner with solid skills on Android. He knows his way around Android SDK, already checked the Glass Developement Kit (GDK) quick start guide allowing him to jump start developing an app for Glass.The Designer has the hard task to build the visual identity from the ground up, he has strong UX knowledge and a deep understanding of the new rules set by the Glass. His design skills give him the credibility to decide the most effective UI and the most compelling Glass experience."}
- - {title: "Polymer", image: "hackathon-2.png", details: "Polymer is a library that introduces web components. Web components are small elements on a page that can be extended and incorporated in web applications. The result is an increase in productivity.<br><br>We used Polymer mainly to explore the concept of web components. The transition of Google to material design was also a factor.While the library was never touched by the team, it still was painless to wireframe the application. Later on we incorporated some Polymer components in the design. We didn’t use the full potential of Polymer because of the limited time."}
+#aboutHackathonTitle: "Meet our themes"
+#hackathonRows:
+# - {title: "Android Wear", image: "hackathon-0.png", details: "The front doors will be locked because this is after hours, please park behind the building and come to the door nearest the parking lot.<br><br>Our last meeting showed that there was a lot of interest in Android Wear so we decided to put on an Android Wear Hackathon to see what you could come up with! We realize that this is pretty short notice so we hope you can help us spread the word! There will be pizza, prizes and a great group of geeks to spend the evening coding with! Even if you don't have an app idea come on in and lend a hand to someone else or maybe find inspiration once you're here!"}
+# - {title: "Google Glass", image: "hackathon-1.png", details: "We love wearable computing especially Google Glass for which we want to gather the break up community in order to boost innovation.<br><br>Coding an app on Google Glass needs its Rockstar Dev : the team needs a fast learner with solid skills on Android. He knows his way around Android SDK, already checked the Glass Developement Kit (GDK) quick start guide allowing him to jump start developing an app for Glass.The Designer has the hard task to build the visual identity from the ground up, he has strong UX knowledge and a deep understanding of the new rules set by the Glass. His design skills give him the credibility to decide the most effective UI and the most compelling Glass experience."}
+# - {title: "Polymer", image: "hackathon-2.png", details: "Polymer is a library that introduces web components. Web components are small elements on a page that can be extended and incorporated in web applications. The result is an increase in productivity.<br><br>We used Polymer mainly to explore the concept of web components. The transition of Google to material design was also a factor.While the library was never touched by the team, it still was painless to wireframe the application. Later on we incorporated some Polymer components in the design. We didn’t use the full potential of Polymer because of the limited time."}
 
 # Hackathon Judges Block
 judgesImage: "judges.jpg"
