--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_int
 
 # Partners Block
 organizersTitle: "Organizer"
-partnersTitle: "Partners"
+partnersTitle: "Sponsors and Partners"
 partnersC4sponsorsButton: "Become a sponsor"
 
 # Partners Block
