--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -66,7 +66,7 @@
   id: 7
   name: "Dr. Evelyn"
   surname: "Morales Vazquez"
-  company: "Graduate School of Education"
+  company: "School of Medicine"
 #  title: "Associate Professor"
 #  bio: "bio"
   thumbnailUrl: Evelyn-Morales-Vazquez.jpg
