--- a/_config.yml
+++ b/_config.yml
@@ -48,13 +48,14 @@ navigationLinks:
  - {permalink: "/speakers/", text: "Speakers"}
  - {permalink: "/sponsors/", text: "Sponsors"}
  - {permalink: "/team/", text: "Team"}
+ - {permalink: "/judges/", text: "Judges"}
 # - {permalink: "/logistics/", text: "Logistics"}
 
 
 bottomNavigationLinks:
- - {link: "hhttps://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Become a speaker"}
+ - {link: "pdf/UCR_RPA_PostdocSymposium2019_Booklet.pdf", text: "PostDoc Symposium 2019 - Booklet"}
 rightNavigationButtons:
- - {link: "https://docs.google.com/forms/d/e/1FAIpQLSfOe5ACmnpw3ser3Nx0gstof-4_G7gwnhCwgG0CNB4ttNWYBw/viewform", text: "Call for Posters"}
+ - {link: "pdf/UCR_RPA_PostdocSymposium2019_Booklet.pdf", text: "PostDoc Symposium 2019 - Booklet"}
 
 # Hero Block
 heroImage: "hero.png"
@@ -64,8 +65,8 @@ location: "HUB 302 South"
 typeoutTextValues: '"", "Postdoc Symposium"'
 #typeoutFallback: "Season"
 heroButtons:
- - {link: "https://github.com/uc-rpa/symposium2019/raw/master/pdf/UCR_RPA_PostdocSymposium2019_Booklet.pdf", text: "PostDoc Symposium 2019 - Booklet"}
- - {link: "https://github.com/uc-rpa/symposium2019/pdf", text: "Agenda"}
+ - {link: "pdf/UCR_RPA_PostdocSymposium2019_Booklet.pdf", text: "PostDoc Symposium 2019 - Booklet"}
+ - {link: "pdf/Postdoc%20Symposium2019_Agenda.pdf", text: "Agenda"}
 
 # About Block
 aboutTitle: "Postdoc Symposium 2019"
